Fix misc. styling issues on mobile

--- a/src/__docs__/public/styles/index.css
+++ b/src/__docs__/public/styles/index.css
@@ -166,3 +166,11 @@ mark {
 .note--info {
   --note-color: hsl(196, 40%, 55%);
 }
+
+@media (width <= 30rem) {
+  .components-keyboard-shortcut {
+    position: absolute;
+    display: none;
+    opacity: 0.1;
+  }
+}
